<resources>
    <string name="app_name">ColdWalletAndroid</string>

    <string name="hint_type">Fiat/Crypto</string>
    <string name="hint_currency">Currency: USD, EUR...</string>
    <string name="hint_amount">Amount: 100.6</string>
    <string name="hint_name">Name: USD amount</string>
    <string name="hint_descrption">Description: USD amount</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">not saved because it is empty.</string>
    <string name="fiat">Fiat</string>
    <string name="crypto">Crypto</string>
    <string name="dash">dash</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading rates...</string>
    <string name="stats">Stats will be here</string>
    <string name="generic_error_message">Opps. Something went wrong.</string>
    <string name="retry">Retry</string>
    <string name="select_asset_type">Which asset you want to add?</string>
    <string name="assets">Assets</string>
    <string name="chart_title">PieChart</string>
    <string name="stats_title">Stats</string>
</resources>